<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivNewsPhoto"
        android:layout_width="160dp"
        android:layout_height="100dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_place_holder"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:ellipsize="end"
        android:maxLines="3"
        android:text="@string/dummy_text"
        android:textColor="@color/text_color_white"
        android:textSize="16sp"
        android:typeface="serif"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/ivNewsPhoto"
        app:layout_constraintTop_toTopOf="@id/ivNewsPhoto" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/font_falling_sky"
        android:text="@string/name"
        android:textColor="@color/text_color_white"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@id/ivNewsPhoto"
        app:layout_constraintStart_toEndOf="@id/ivNewsPhoto" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/font_falling_sky"
        android:text="@string/date_month"
        android:textColor="@color/text_color_white"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@id/ivNewsPhoto"
        app:layout_constraintEnd_toStartOf="@id/ivBookMark" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivBookMark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_bookmark_white"
        app:layout_constraintBottom_toBottomOf="@id/ivNewsPhoto"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>